# dibox

./: .coverage  .gitlab-ci.yml  README.md  pyproject.toml
dibox/: __init__.py  annotations.py  dimap.py  factory_box.py  injector.py  instance_box.py
docs/design eps/: bind_api.md  binding_modules.md  design_eps_index.md  factories.md  injection_modes.md  named_bindings.md  scopes.md  sync_async.md
src/dibox/: annotations.py  dibox.py  dimap.py  factory_box.py  injector.py  instance_box.py
tests/: dibox_test.py  dimap_test.py  factory_box_test.py  inject_test.py
