[project]
name = "dibox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "attrs>=25.4.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
junit_family = "xunit2"

[tool.ruff]
extend-exclude = ["./notebooks"]
lint.select = ["E", "F", "I"]
line-length = 125

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
