[project]
name = "dibox"
version = "0.1.1.dev2"
description = "Dependency injection framework for Python with auto wiring and context management."
authors = [
    {name = "Alex Zee", email = "alex.zee@outlook.cz"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "attrs>=25.4.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
junit_family = "xunit2"
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["./notebooks"]
lint.select = ["E", "F", "I"]
line-length = 125

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
