[project]
name = "dibox"
version = "0.1.3"
description = "Async-native dependency injection framework based on type hints"
authors = [
    {name = "Alex Zee", email = "alex.zee@outlook.cz"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = {file = "LICENSE"}
keywords = ["dependency injection", "async", "type hints", "lifecycle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://gitlab.com/AlexZee/dibox"
source = "https://gitlab.com/AlexZee/dibox"

[dependency-groups]
dev = [
    "attrs>=25.4.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
junit_family = "xunit2"
testpaths = ["tests"]
python_classes = ["Test*", "*Test"]

[tool.ruff]
extend-exclude = ["./notebooks"]
lint.select = ["E", "F", "I", "PT"]
line-length = 125

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
